# maziogra_http

./: .gitignore  CMakeLists.txt  build.sh  main.cpp  run.sh  vcpkg.json
include/: CoreSocket.h  HttpRequest.h  HttpResponse.h  ServerHTTP.h
include/server/: HttpRequest.h  HttpRequestParser.h  HttpResponse.h  ServerHTTP.h  ServerThread.h
include/server/routes/: RouteTree.h  Router.h
include/server/types/: RouteTypes.h
include/socket/: BaseSocket.h  SecureSocket.cpp  SecureSocket.h  Socket.h
include/utils/: NetInit.h
src/: CoreSocket.cpp  HttpRequest.cpp  HttpResponse.cpp  Main.cpp  ServerHTTP.cpp
src/Server/: HttpRequest.cpp  ServerHTTP.cpp  ServerThread.cpp
src/server/: HttpRequest.cpp  HttpRequestParser.cpp  ServerHTTP.cpp  ServerThread.cpp
src/server/routes/: Router.cpp
src/socket/: BaseSocket.cpp  SecureSocket.cpp
tests/: test_parser.cpp  test_request.cpp
